# trackWise

./: CLAUDE.md  README.md  agent.py  database.py  decide.py  delete_collection.py  docker-compose.yml  docker_compose.yml  embeding.py  finance_models.py  finance_repository.py  graph.py  llm.py  main.py  prompts.py  pyproject.toml  render.yaml  render.yml  reterival.py  state.py  tool.py
tests/: test_finance_repository.py  test_finance_tools.py  test_phase1_flow.py
ui/: next.config.ts  package-lock.json  package.json
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/lib/: api.ts
v2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
