[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "langchain-groq>=1.1.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langgraph-checkpoint-redis>=0.4.1",
    "radis>=0.17",
    "redis>=7.4.0",
    "langchain-qdrant>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["graph", "llm", "agent", "main"]
