[project]
name = "v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.10",
    "anthropic>=0.7.0",
    "python-dotenv>=1.0.0",
    "langchain-groq>=1.1.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.47.0",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langchain-qdrant>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "asyncpg>=0.31.0",
    "langchain-gemini>=0.1.1",
    "langchain-google-genai>=4.2.3",
    "google-api-core>=2.0.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "agent",
    "database",
    "embeding",
    "finance_models",
    "finance_repository",
    "graph",
    "llm",
    "main",
    "reterival",
    "state",
    "tool",
]
